# ImageConverter

./: README.md
ImgConverter/: main.cpp
ImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp
imgToBinary/: Makefile  Makefile.Debug  Makefile.Release  bin.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
imgToBinary/debug/: moc_mainwindow.cpp  moc_predefs.h
